--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -15,10 +15,10 @@
     <script src="https://code.angularjs.org/1.5.0/angular-route.min.js"></script>
 
     <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!--custom CSS-->
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body ng-controller="MainController">
