--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                       <hr class="intro-divider">
                       <ul class="list-inline intro-social-buttons">
                           <li>
-                              <a href="assignment/index.html" class="btn btn-default btn-lg"><i class="fa fa-bar-chart fa-fw"></i> <span class="network-name">Assignment</span></a>
+                              <a href="assignment/client/index.html" class="btn btn-default btn-lg"><i class="fa fa-bar-chart fa-fw"></i> <span class="network-name">Assignment</span></a>
                           </li>
                           <li>
                               <a href="project/index.html" class="btn btn-default btn-lg"><i class="fa fa-line-chart fa-fw"></i> <span class="network-name">Project</span></a>
