--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -14,6 +14,9 @@
     <!--loading angularJs route-->
     <script src="https://code.angularjs.org/1.5.0/angular-route.min.js"></script>
 
+    <!--loading ui-sortable-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-sortable/0.13.4/sortable.min.js"></script>
+
     <!-- Bootstrap core CSS -->
     <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +37,7 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
 <script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
 <!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -59,6 +62,7 @@
 
 <script src="directives/form-field.js"></script>
 <script src="directives/modal-field.js"></script>
+
 
 </body>
 </html>
